# OOPLAST

./: CMakeLists.txt  CMakeLists.txt.user.60b6356  NewAd.txt  NewSoyad.txt  NewSuperLeague1.txt  dialog.cpp  dialog.h  dialog.ui  fikstur.cpp  fikstur.h  fikstur.ui  league.cpp  league.h  league.ui  mac.cpp  mac.h  mac_bilgi_ekrani.cpp  mac_bilgi_ekrani.h  mac_bilgi_ekrani.ui  main.cpp  oyuncu.cpp  oyuncu.h  oyuncu_ekle.cpp  oyuncu_ekle.h  oyuncu_ekle.ui  oyuncular.cpp  oyuncular.h  oyuncular.ui  takim.cpp  takim.h  takim_ekle.cpp  takim_ekle.h  takim_ekle.ui  takimlar.cpp  takimlar.h  takimlar.ui  untitled2_tr_TR.ts
